Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17720

slave_ddl_exec_mode=IDEMPOTENT does not handle DROP DATABASE

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3.10
    • 10.0.38
    • Replication
    • None

    Description

      With slave_ddl_exec_mode=IDEMPOTENT a DROP TABLE ... gets rewritten to DROP TABLE IF EXISTS ... before being executed on a slave, so it does not fail if the table is missing on the salve side.

      A DROP DATABASE ... on the other hand does not get rewritten, and so leads to

                      Last_SQL_Errno: 1008
                      Last_SQL_Error: Error 'Can't drop database 'test23'; database doesn't exist' on query.        
                             Default database: 'test23'. Query: 'drop database test23'
      

      Attachments

        Activity

          HI Elkin , please review the patch for this bug , it is in bb-10.0-17720 branch

          sachin.setiya.007 Sachin Setiya (Inactive) added a comment - HI Elkin , please review the patch for this bug , it is in bb-10.0-17720 branch

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            hholzgra Hartmut Holzgraefe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.