MDEV-17720 slave_ddl_exec_mode=IDEMPOTENT does not handle DROP DATABASE

Relevant if exists flag are added for create database and drop database.